[package]
name = "modpack-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }

reqwest = { version = "0.11.16", features = ["serde_json"] }
serde_json = "1.0.95"

percent-encoding = "2.2.0"