[package]
name = "modpack-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
serde = { version = "1.0.160", features = ["derive"] }
futures = "0.3.28"

reqwest = { version = "0.11.16", features = ["serde_json"] }
serde_json = "1.0.95"
zip-extract = "0.1.2"

percent-encoding = "2.2.0"
lazy_static = "1.4.0"
once_cell = "1.17.1"
async-recursion = "1.0.4"